--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Dashboard.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Dashboard.cshtml
@@ -2,7 +2,7 @@
     <div class="col-lg-10 col-md-10 col-sm-12 offset-lg-1 offset-md-1">
         <div class="card">
             <div class="card-body bg-transparent">
-                <h4 class="card-title"><i class="fa fa-chart-bar"></i> Admin Dashboard</h4>
+                <h4 class="card-title"><i class="fa fa-tachometer-alt"></i> Admin Dashboard</h4>
                 <a asp-controller="Admin" asp-action="QuestionCreate" class="btn btn-outline-primary text-dark">Create Question Set</a>
                 <h5 class="mt-4">Available Questions</h5>
 
