--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionView.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionView.cshtml
@@ -20,10 +20,17 @@
                 <div class="mb-3">
                     <label for="duration" class="form-label text-white">Duration</label>
                     <select id="duration" name="duration" class="form-control" aria-label="Default select example">
+                        <option value="2">2 Minutes</option>
+                        <option value="5">5 Minutes</option>
+                        <option value="15">15 Minutes</option>
                         <option value="30">30 Minutes</option>
                         <option value="60">60 Minutes</option>
                         <option value="90">90 Minutes</option>
                         <option value="120">120 Minutes</option>
+                        <option value="120">150 Minutes</option>
+                        <option value="120">180 Minutes</option>
+                        <option value="120">210 Minutes</option>
+                        <option value="120">240 Minutes</option>
                     </select>
                     <div id="durationHelp" class="form-text text-secondary">Set exam duration in minutes</div>
                 </div>
