--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
@@ -17,7 +17,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">1) Before starting the test, make sure that you have a <strong>good internet connection</strong></li>
                     <li class="list-group-item">2) During test, <strong>DO NOT</strong> use any external device such as mobile phone or TAB</li>
-                    <li class="list-group-item">3) This test is <strong>Window Proctored.</strong> Please <strong>DO NOT</strong> navigate away from the test window during the test. If the system detects that you have opened any other application (browser, chat etc) it will mark you disqualified.</li>
+                    <li class="list-group-item">3) This test is <strong>Window Proctored.</strong> Please <strong>DO NOT</strong> navigate away from the test window during the test. If the system detects that you have opened any other browser tab, application (browser, chat etc) it will mark you disqualified. Even you are not allowed to click on <strong>outside the browser page area</strong> during the <strong>TEST</strong>.</li>
                     <li class="list-group-item">4) Once the test is started, you cannot <strong>leave it or restart it.</strong></li>
                     <li class="list-group-item">5) You can submit same questions as many times as you want, <strong>only the last submitted answer will be counted.</strong></li>
                 </ul>
