--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Online Test</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/images/logo.png" /> Online Test System</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,10 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Dashboard">Dashboard</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Dashboard"><i class="fa fa-tachometer-alt"></i> Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Settings"><i class="fa fa-cogs"></i> Settings</a>
                             </li>
                         }
                     </ul>
@@ -63,7 +66,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - Online Test
+            &copy; @DateTime.Now.Year - ASAI - Online Test System
         </div>
     </footer>
     
