--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
@@ -15,6 +15,7 @@
                 <h5 class="mt-4">Questions</h5>
                 <div id="questions-container"></div>
                 <button id="complete-btn" onclick="questionService.completeTest()" class="btn btn-info btn-block text-white mt-2 mb-5">COMPLETE TEST</button>
+                <h6 id="complete-msg" class="text-success"></h6>
             </div>
         </div>
     </div>
