--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="col-lg-10 col-md-10 col-sm-12 offset-lg-1 offset-md-1">
+    <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card">
             <div class="card-body bg-transparent">
                 <input type="hidden" id="exam-id" value="@ViewBag.ExamId" />
@@ -16,6 +16,7 @@
                             <th>Phone</th>
                             <th>Total Marks</th>
                             <th>Obtained Marks</th>
+                            <th>Total Submission</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
