--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
@@ -6,6 +6,8 @@
                 <input type="hidden" id="exam-id" value="0" />
                 <input type="hidden" id="exam-created-on" value="@DateTime.Now.ToString("yyyy-MM-dd hh:mm:ss")" />
                 <input type="hidden" id="exam-created-by" value="@User.Identity.Name" />
+                <input type="hidden" id="question-created-on" value="@DateTime.Now.ToString("yyyy-MM-dd hh:mm:ss")" />
+                <input type="hidden" id="question-created-by" value="@User.Identity.Name" />
                 <div class="mb-3">
                     <label for="title" class="form-label text-white">Title</label>
                     <input type="text" class="form-control" id="title" name="title" aria-describedby="titleHelp">
@@ -36,7 +38,7 @@
                 </div>
 
                 <h5 class="mt-4 text-white">Questions</h5>
-                <ul id="question-group-1" data-id="0" class="list-group list-group-flush">
+                <ul id="question-group-1" data-id="0" data-created-on="@DateTime.Now.ToString("yyyy-MM-dd hh:mm:ss")" data-created-by="@User.Identity.Name" class="list-group list-group-flush">
                     <li style="display: none;" class="list-group-item">
                         <div class="float-right">Delete <i style="cursor: pointer;" class="fa fa-times-circle text-danger"></i></div>
                     </li>
