--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
@@ -28,33 +28,39 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Dashboard"><i class="fa fa-tachometer-alt"></i> Dashboard</a>
                             </li>
+                            <div class="dropdown">
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Settings"><i class="fa fa-cogs"></i> Settings</a>
-                            </li>
-                        }
-                    </ul>
-                    <ul class="navbar-nav">
-                        @if (!User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="btn btn-outline-success text-white" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-white">@User.Identity.Name</a>
-                            </li>
-                            <li class="nav-item">
-                                <form asp-controller="Account" asp-action="Logout" method="post">
-                                    <button type="submit" class="btn btn-outline-success text-white">Logout</button>
-                                </form>
-                            </li>
+                                <a class="nav-link text-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="" asp-controller="Admin" asp-action="Settings"><i class="fa fa-cogs"></i> Settings</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="UserList"><i class="fa fa-users" aria-hidden="true"></i> User Management</a>
 
+                                </div>
+                            </li>
+                    </div>
                         }
+                        </ul>
+                        <ul class="navbar-nav">
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="btn btn-outline-success text-white" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-white">@User.Identity.Name</a>
+                                </li>
+                                <li class="nav-item">
+                                    <form asp-controller="Account" asp-action="Logout" method="post">
+                                        <button type="submit" class="btn btn-outline-success text-white">Logout</button>
+                                    </form>
+                                </li>
 
-                    </ul>
-                </div>
+                            }
+
+                        </ul>
+                    </div>
             </div>
         </nav>
     </header>
