--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/UserList.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/UserList.cshtml
@@ -22,3 +22,8 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        userService.getUsers();
+    });
+</script>
