--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/user-management.js" asp-append-version="true"></script>
 </head>
 <body>
     <header>
