--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
@@ -4,6 +4,8 @@
             <div class="card-body bg-dark">
                 <h4 class="text-white">View/Edit User Details</h4>
                 <input type="hidden" id="user-id" value="@ViewBag.UserId" />
+                <input type="hidden" id="created-on" value="" />
+                <input type="hidden" id="created-by" value="" />
                 <div class="mb-3">
                     <label for="email" class="form-label text-white">Email</label>
                     <input type="email" class="form-control" id="email" name="email">
