--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
@@ -30,13 +30,13 @@
                 </div>
 
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="status">
+                    <input class="form-check-input" type="checkbox" id="status" checked>
                     <label class="form-check-label text-white" for="status">
                         Active
                     </label>
                 </div>
 
-                <button type="button" class="btn btn-info float-right mt-2">Save</button>
+                <button type="button" onclick="userManagementService.saveUser()" class="btn btn-info float-right mt-2">Save</button>
             </div>
            
         </div>
