--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/Edit.cshtml
@@ -24,8 +24,8 @@
                 <div class="mb-3">
                     <label for="role" class="form-label text-white">Role </label>
                     <select id="role" name="role" class="form-control" aria-label="Default select example">
-                        <option> Admin </option>
-                        <option> Invigilator </option>
+                        <option value="1">Admin</option>
+                        <option value="2">Invigilator</option>
                     </select>
                 </div>
 
