--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/UserList.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/User/UserList.cshtml
@@ -3,6 +3,9 @@
         <div class="card">
             <div class="card-body bg-transparent">
                 <h4 class="card-title"><i class="fa fa-users" aria-hidden="true"></i> User Management</h4>
+
+                <a asp-controller="User" asp-action="CreateUser" class="btn btn-outline-primary text-dark">Add User</a>
+
                 <h5 class="mt-4">User List</h5>
 
                 <table id="user-table" class="table table-dark table-striped table-hover">
