Examinee Score in progress

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
@@ -3,8 +3,9 @@
         <div class="modal-content">
 
             <div class="modal-header">
+
+                <h4 class="modal-title" id="scoreModalLabel"><i class="fa fa-list " aria-hidden="true"></i> Examinee Score Details</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="scoreModalLabel"><i class="fa fa-list " aria-hidden="true"></i> Examinee Scores Details</h4>
             </div>
 
             <div class="modal-body">
@@ -16,7 +17,7 @@
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Examiner's Name</th>
+                            <th>Examiner</th>
                             <th>Score</th>
 
                         </tr>
@@ -26,10 +27,7 @@
                 </table>
             </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                
-            </div>
+            
         </div>
     </div>
 </div>
