--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12">
+    <div class="col-lg-14 col-md-14 col-sm-14">
         <div class="card">
             <div class="card-body bg-transparent">
                 <input type="hidden" id="exam-id" value="@ViewBag.ExamId" />
@@ -30,6 +30,8 @@
         </div>
     </div>
 </div>
+@Html.Partial("_ExamineeScore");
+
 
 <script type="text/javascript">
     $(document).ready(function () {
