examinee score modal created

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
@@ -30,8 +30,8 @@
         </div>
     </div>
 </div>
-@Html.Partial("_ExamineeScore");
 
+<partial name="_ExamineeScore"/>
 
 <script type="text/javascript">
     $(document).ready(function () {
