--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal fade" id="scoreModal" tabindex="-1" role="dialog" aria-labelledby="scoreModalLabel">
+﻿
+<div class="modal fade" id="scoreModal" tabindex="-1" role="dialog" aria-labelledby="scoreModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
 
@@ -10,9 +11,9 @@
 
             <div class="modal-body">
                 <a class="btn btn-outline-primary text-dark">Download CV</a>
-
+                <input type="hidden" id="examinee-id" value="" />
                 <h5 class="mt-4">Examiner's Scores</h5>
-
+                
                 <table id="examiner-score-table" class="table table-dark table-striped table-hover">
                     <thead>
                         <tr>
@@ -31,3 +32,8 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        questionService.getExamineeScore();
+    });
+</script>
