examinee score updates

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/_ExamineeScore.cshtml
@@ -12,14 +12,16 @@
             <div class="modal-body">
                 <a class="btn btn-outline-primary text-dark">Download CV</a>
                 <input type="hidden" id="examinee-id" value="" />
+                <input type="hidden" id="user-email" value="@ViewBag.Email" />
                 <h5 class="mt-4">Examiner's Scores</h5>
-                
+
                 <table id="examiner-score-table" class="table table-dark table-striped table-hover">
                     <thead>
                         <tr>
                             <th>#</th>
                             <th>Examiner</th>
                             <th>Score</th>
+                            <th></th>
 
                         </tr>
                     </thead>
