cv upload issue

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
@@ -27,6 +27,16 @@
                     <tbody>
                     </tbody>
                 </table>
+                <div class="row">
+                    <h2>Upload file using jQuery ajax in Asp.net Core Razor Pages</h2>
+
+                    <div class=" form-group  text-center offset-3">
+                        <div class="custom-file">
+                            <input type="file" id="fileUpload" class="fileUpload">
+                            <button id="btnUpload" class="btn btn-success" onclick="questionService.upload()">Upload</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
